demos/hcp1-data-plane-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hcp1-data-plane-demo
  labels:
    app.kubernetes.io/name: data-plane-demo
