demos/hcp1-data-plane-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcade-demo
  labels:
    app.kubernetes.io/name: arcade-demo
spec:
  selector:
    app.kubernetes.io/name: arcade-demo
  ports:
    - name: http
      port: 8080
      targetPort: http
