demos/hcp1-data-plane-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: arcade-demo
  labels:
    app.kubernetes.io/name: arcade-demo
spec:
  to:
    kind: Service
    name: arcade-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
